# taste.node

./: .env.example  .gitignore  AGENTS.md  DEVELOPER_HANDOFF.txt  MARKER.txt  PLANNING_HYGIENE.md  Procfile  README.md  alembic.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  vitest.workspace.ts
alembic/: env.py
data/: venues.csv
docs/: ADR-001_REJECTED_TOOLS.md  AGENTS.md  AI_MODEL_EVAL.md  ARCHIVE_CLUSTER_ARCHITECTURE_v0.1.md  CLUSTERING_ARCHITECTURE.md  CLUSTER_ARCHITECTURE.md  DATA_CONTRACT.md  DEMO_SCRIPT.md  EVALUATION_PLAN.md  MILESTONES.md  PM_TEAM_BUILDING_PROMPT.md  PRD.md  PROJECT_AUDIT.md  PROJECT_OVERVIEW.md  SECURITY_BOUNDARIES.md  SUPABASE_MIGRATION.md  TDD.md  TDD_REWRITE_PROMPT.md  UIUX_REVIEW.md  VENUE_INGESTION_PIPELINE.md  planning_audit_and_prompt_report.md  planning_audit_report.md
scripts/: generate_likes_sql.py  generate_synthetic_data.py  ingest_tokyo_venues.py  seed_all_demo_data.py  seed_likes_to_supabase.py  seed_sumer_influencer.py  seed_venues_to_supabase.py  update_names.py
src/: .gitkeep  clustering.py  db.py  main.py  mock_database.py  models.py  recommendations.py  similarity.py  supabase_db.py  synthetic_data.py
supabase/: 000_complete_schema.sql  README_SEED.md  apply_public_rls.sql  diagnostics.sql  fix_schema.sql  generate_japan_venues.py  generate_synthetic_data.py  seed_all.sh  seed_demo_to_supabase.py  seed_venues_to_supabase.py
tests/: .gitkeep  test_api.py  test_clustering.py  test_models.py  test_similarity.py  test_synthetic_data.py
web/: .env.example  .env.production  .gitignore  index.html  (+6 more)
(+66 files in other folders)
