[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-node"
version = "0.2.0"
description = "AI-executable taste similarity and recommendation API"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.0",
    "scipy==1.14.0",
    "hdbscan==0.8.40",
    "numpy==1.26.0",
    "sqlalchemy==2.0.0",
    "httpx==0.27.0",
    "python-json-logger==3.0.0",
    "slowapi==0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.0",
    "alembic==1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
